Updated for missing tutorial for kairos

--- a/index.html
+++ b/index.html
@@ -733,6 +733,20 @@
               </tbody>
             </table>
 
+            <footer>
+              <h2>"The Missing Tutorial" Links</h2>
+              <nav>
+                <ul>
+                  <li>
+                    <a href="writing-with-data.html" target="_blank">Writing with data</a>
+                  </li>
+                  <li>
+                    <a href="data-changes.html" target="_blank">From data feed to data viz</a>
+                  </li>
+                </ul>
+              </nav>
+            </footer>
+
           </div>
         </div>
       </section>
