--- a/data-changes.html
+++ b/data-changes.html
@@ -1,93 +1,60 @@
-<html>
-<head>
-  <link rel="stylesheet" href="css/markdownreader.css">
-  <link rel="stylesheet" href="css/prettify.css">
-  <link rel="stylesheet" href="css/katex.min.css">
-</head>
-<body>
-  <div id="container" class="viewport-flip">
-    <div id="text-container" class="content flip" style="display:none;">
-# From data feed to data viz: Reviewing the rewriting of the tabulated data
+<html><head><link rel="stylesheet" href="chrome-extension://dpbfenggfpljncgenofokjbmacomofag/markdownreader.css"><link rel="stylesheet" href="chrome-extension://dpbfenggfpljncgenofokjbmacomofag/prettify.css"><link rel="stylesheet" href="chrome-extension://dpbfenggfpljncgenofokjbmacomofag/katex.min.css"></head><body><div id="container" class="viewport-flip"><div id="text-container" class="content flip" style="display: none; width: 92%;"># From data feed to data viz: Reviewing the rewriting of the tabulated data
 
 In the ordered list below, I review the major changes in the way the data was originally structured as tabulated information. Be sure to note how Ridolfo's data is written as a typical spreadsheet, which follows the standard rows and columns structure. In the second list item, note how the spreadsheet is reformatted as a JSON (JavaScript Object Notation). Then, be sure to note how I revise the data from its original format, using the JavaScript programming language. I use the first year (2012-2013) as a running example throughout the list below, as well as console logs which I review in the video:
 
-1. In the below image, this is how Ridolfo has structured the data in a table format: &lt;br /&gt;&lt;img style="width:60%" src="images/google-sheets-market-comparison.png" /&gt;
-2. In the &lt;code&gt;getData()&lt;/code&gt; function (lines 38-74), I retrieve the spreadsheet data in the JSON feed format. Note that this JSON feed includes data specific to the application data, which helps render the details of the user-interface rendering of Ridolfo's original table. Conseqeuntly, it includes far more information than I need; hence, the data processing work to follow. &lt;br /&gt;&lt;img style="width:60%" src="images/google-rhetmap-json.png" /&gt;
-3. At the start of the &lt;code&gt;formatData()&lt;/code&gt;, inside the &lt;code&gt;for&lt;/code&gt; loop &lt;small&gt;(lines 152-184)&lt;/small&gt;, I write the &lt;code&gt;yr1213wks&lt;/code&gt; and other weekly data per year formats:&lt;br /&gt;&lt;br /&gt;&lt;code&gt;["68", "83", "95", "113", "123", "134", "149", "155", "167", "176", "184", "193", "196", "198", "201", "205", "205"]&lt;/code&gt;.&lt;br /&gt;&lt;br /&gt;
-4. In &lt;code&gt;writeYears()&lt;/code&gt; &lt;small&gt;(lines 115-148)&lt;/small&gt;, I write the &lt;code&gt;yr1213&lt;/code&gt; and other year data formats:&lt;br /&gt;&lt;br /&gt;&lt;code&gt;{yr: "2012 - 2013", wks: ["68", "83", "95", ...] }&lt;/code&gt;.&lt;br /&gt;&lt;br /&gt;
+1. In the below image, this is how Ridolfo has structured the data in a table format: &lt;br /&gt;&lt;img style="width:60%" src="images/google-sheets-market-comparison.png" /&gt;&lt;br /&gt;Note how the table's rows observe a *per Week* period, while the columns track the interested totals *per Year*. Now, compare these textual modes to the way they are represented in the temporal chart below. Notice how the *per Week* rows became the *x-axis* values along the bottom to chart the *per Year* values as individual lines with their weekly values along the *y-axis*.&lt;br /&gt;&lt;br /&gt;&lt;br /&gt;&lt;img style="width:60%" src="images/rhetmap-chart.png" /&gt;&lt;br /&gt;&lt;br /&gt;&lt;br /&gt;&lt;hr /&gt;
+2. In the &lt;code&gt;getData()&lt;/code&gt; function (lines 38-74), I retrieve the spreadsheet data in the JSON feed format. Note that this [JSON feed](https://spreadsheets.google.com/feeds/list/1GuECV6Ot60h-Qab3e9-KPaKLdgXB3reoyZgo3VTlO_w/od6/public/values?alt=json) includes data specific to the application data, which helps render the details of the user-interface rendering of Ridolfo's original table. Consequently, it includes far more information than I need; hence, the data processing work to follow. &lt;br /&gt;&lt;img style="width:60%" src="images/google-rhetmap-json.png" /&gt;&lt;br /&gt;&lt;br /&gt;&lt;br /&gt;&lt;hr /&gt;
+3. At the start of the &lt;code&gt;formatData()&lt;/code&gt;, inside the &lt;code&gt;for&lt;/code&gt; loop, I write the &lt;code&gt;yr1213wks&lt;/code&gt; and other weekly data into a *per Year* array (list) structure:&lt;br /&gt;&lt;br /&gt;&lt;code&gt;["68", "83", "95", "113", "123", "134", "149", "155", "167", "176", "184", "193", "196", "198", "201", "205", "205"]&lt;/code&gt;.&lt;br /&gt;&lt;br /&gt;Note how the array of items are in the order from the original table. Be careful about how you create any lists, since some computational methods in programming languages might rearrange values based on when and how they retrieve them.&lt;br /&gt;&lt;br /&gt;&lt;br /&gt;&lt;br /&gt;&lt;br /&gt;&lt;hr /&gt;
+4. In &lt;code&gt;writeYears()&lt;/code&gt;, I write the &lt;code&gt;yr1213&lt;/code&gt; and other year data into what is called a *JS object array*: &lt;code&gt;{ yr: "2012 - 2013", wks: ["68", "83", "95", ...] }&lt;/code&gt;. In this case, &lt;code&gt;yr&lt;/code&gt; means "year" and is the key for the string value of the year, and &lt;code&gt;wks&lt;/code&gt; means "weeks" and is the key for the array list of respective weekly job-posting totals.&lt;br /&gt;&lt;br /&gt;
   &lt;pre&gt;
 {
       yr: "2012 - 2013",
       wks: ["68", "83", "95", "113", "123", "134", ...]
 }
-  &lt;/pre&gt;
-5. In &lt;code&gt;writeMarketData()&lt;/code&gt; &lt;small&gt;(lines 187-196)&lt;/small&gt;, I write the &lt;code&gt;yrData&lt;/code&gt; format:&lt;br /&gt;&lt;br /&gt;&lt;code&gt;[ { yr:"", wks:{...} }, { yr:"", wks:{...} }, ... ]&lt;/code&gt;.&lt;br /&gt;&lt;br /&gt;
+  &lt;/pre&gt;&lt;br /&gt;&lt;br /&gt;Object arrays provide you the capacity to name key-value paris and also create hierarchical relationships, if necessary.&lt;br /&gt;&lt;br /&gt;&lt;br /&gt;&lt;hr /&gt;
+5. In &lt;code&gt;writeMarketData()&lt;/code&gt; &lt;small&gt;(lines 187-196)&lt;/small&gt;, I write the &lt;code&gt;yrData&lt;/code&gt; format:&lt;br /&gt;&lt;br /&gt;&lt;code&gt;[ { yr:"", wks:[...] }, { yr:"", wks:[...] }, ... ]&lt;/code&gt;.&lt;br /&gt;&lt;br /&gt;&lt;code&gt;yrData&lt;/code&gt; is an array that combines the multiple "yearly data" objects that I created prior to this moment in the code, which have the same 2 key-value pairs: &lt;code&gt;yr&lt;/code&gt;, the years, and &lt;code&gt;wks&lt;/code&gt;, the sorted array list of weekly totals.&lt;br /&gt;&lt;br /&gt;
   &lt;pre&gt;[
-    0: {
-      yr: "2012 - 2013",
-      wks: {
-        0: "68",
-        1: "83",
-        2: "95",
-        3: "113",
-        ...
+      {
+        yr: "2012 - 2013",
+        wks: [ "68","83","95","113",... ]
+      },
+      {
+        yr: "2013 - 2014",
+        wks: [ "61","77","91","103",... ]
       }
-    },
-    1: {
-      yr: "2013 - 2014",
-      wks: {
-        0: "61",
-        1: "77",
-        2: "91",
-        3: "103",
-        ...
-      }
-    }
-    ...
+      ...
   ]
   &lt;/pre&gt;
-</div><div id="markdown-container" class="content flip"><h1 id="0">From data feed to data viz: Reviewing the rewriting of the tabulated data</h1>
+</div><div id="markdown-container" class="content flip" style="width: 92%;"><h1 id="0">From data feed to data viz: Reviewing the rewriting of the tabulated data</h1>
 
 <p>In the ordered list below, I review the major changes in the way the data was originally structured as tabulated information. Be sure to note how Ridolfo's data is written as a typical spreadsheet, which follows the standard rows and columns structure. In the second list item, note how the spreadsheet is reformatted as a JSON (JavaScript Object Notation). Then, be sure to note how I revise the data from its original format, using the JavaScript programming language. I use the first year (2012-2013) as a running example throughout the list below, as well as console logs which I review in the video:</p>
 
 <ol>
 
-<li>In the below image, this is how Ridolfo has structured the data in a table format: <br><img style="width:60%" src="images/google-sheets-market-comparison.png"></li>
+<li>In the below image, this is how Ridolfo has structured the data in a table format: <br><img style="width:60%" src="images/google-sheets-market-comparison.png"><br>Note how the table's rows observe a <em>per Week</em> period, while the columns track the interested totals <em>per Year</em>. Now, compare these textual modes to the way they are represented in the temporal chart below. Notice how the <em>per Week</em> rows became the <em>x-axis</em> values along the bottom to chart the <em>per Year</em> values as individual lines with their weekly values along the <em>y-axis</em>.<br><br><br><img style="width:60%" src="images/rhetmap-chart.png"><br><br><br><hr></li>
 
-<li>In the <code>getData()</code> function (lines 38-74), I retrieve the spreadsheet data in the JSON feed format. Note that this JSON feed includes data specific to the application data, which helps render the details of the user-interface rendering of Ridolfo's original table. Conseqeuntly, it includes far more information than I need; hence, the data processing work to follow. <br><img style="width:60%" src="images/google-rhetmap-json.png"></li>
+<li>In the <code>getData()</code> function (lines 38-74), I retrieve the spreadsheet data in the JSON feed format. Note that this <a href="https://spreadsheets.google.com/feeds/list/1GuECV6Ot60h-Qab3e9-KPaKLdgXB3reoyZgo3VTlO_w/od6/public/values?alt=json">JSON feed</a> includes data specific to the application data, which helps render the details of the user-interface rendering of Ridolfo's original table. Consequently, it includes far more information than I need; hence, the data processing work to follow. <br><img style="width:60%" src="images/google-rhetmap-json.png"><br><br><br><hr></li>
 
-<li>At the start of the <code>formatData()</code>, inside the <code>for</code> loop <small>(lines 152-184)</small>, I write the <code>yr1213wks</code> and other weekly data per year formats:<br><br><code>["68", "83", "95", "113", "123", "134", "149", "155", "167", "176", "184", "193", "196", "198", "201", "205", "205"]</code>.<br><br></li>
+<li>At the start of the <code>formatData()</code>, inside the <code>for</code> loop, I write the <code>yr1213wks</code> and other weekly data into a <em>per Year</em> array (list) structure:<br><br><code>["68", "83", "95", "113", "123", "134", "149", "155", "167", "176", "184", "193", "196", "198", "201", "205", "205"]</code>.<br><br>Note how the array of items are in the order from the original table. Be careful about how you create any lists, since some computational methods in programming languages might rearrange values based on when and how they retrieve them.<br><br><br><br><br><hr></li>
 
-<li>In <code>writeYears()</code> <small>(lines 115-148)</small>, I write the <code>yr1213</code> and other year data formats:<br><br><code>{yr: "2012 - 2013", wks: ["68", "83", "95", ...] }</code>.<br><br>
+<li>In <code>writeYears()</code>, I write the <code>yr1213</code> and other year data into what is called a <em>JS object array</em>: <code>{ yr: "2012 - 2013", wks: ["68", "83", "95", ...] }</code>. In this case, <code>yr</code> means "year" and is the key for the string value of the year, and <code>wks</code> means "weeks" and is the key for the array list of respective weekly job-posting totals.<br><br>
 <pre>{
   yr: "2012 - 2013",
   wks: ["68", "83", "95", "113", "123", "134", ...]
 }
-</pre></li>
+</pre><br><br>Object arrays provide you the capacity to name key-value paris and also create hierarchical relationships, if necessary.<br><br><br><hr></li>
 
-<li>In <code>writeMarketData()</code> <small>(lines 187-196)</small>, I write the <code>yrData</code> format:<br><br><code>[ { yr:"", wks:{...} }, { yr:"", wks:{...} }, ... ]</code>.<br><br>
+<li>In <code>writeMarketData()</code> <small>(lines 187-196)</small>, I write the <code>yrData</code> format:<br><br><code>[ { yr:"", wks:[...] }, { yr:"", wks:[...] }, ... ]</code>.<br><br><code>yrData</code> is an array that combines the multiple "yearly data" objects that I created prior to this moment in the code, which have the same 2 key-value pairs: <code>yr</code>, the years, and <code>wks</code>, the sorted array list of weekly totals.<br><br>
 <pre>[
-0: {
-  yr: "2012 - 2013",
-  wks: {
-    0: "68",
-    1: "83",
-    2: "95",
-    3: "113",
-    ...
+  {
+    yr: "2012 - 2013",
+    wks: [ "68","83","95","113",... ]
+  },
+  {
+    yr: "2013 - 2014",
+    wks: [ "61","77","91","103",... ]
   }
-},
-1: {
-  yr: "2013 - 2014",
-  wks: {
-    0: "61",
-    1: "77",
-    2: "91",
-    3: "103",
-    ...
-  }
-}
-...
+  ...
 ]
 </pre></li>
 
