forgot to retain the head of the doc

--- a/data-changes.html
+++ b/data-changes.html
@@ -1,4 +1,12 @@
-<html><head><link rel="stylesheet" href="chrome-extension://dpbfenggfpljncgenofokjbmacomofag/markdownreader.css"><link rel="stylesheet" href="chrome-extension://dpbfenggfpljncgenofokjbmacomofag/prettify.css"><link rel="stylesheet" href="chrome-extension://dpbfenggfpljncgenofokjbmacomofag/katex.min.css"></head><body><div id="container" class="viewport-flip"><div id="text-container" class="content flip" style="display: none; width: 92%;"># From data feed to data viz: Reviewing the rewriting of the tabulated data
+<!DOCTYPE html>
+<html>
+<head>
+  <title>The Missing Tutorial: From Data Feed to Data Viz</title>
+  <link rel="stylesheet" href="css/markdownreader.css">
+  <link rel="stylesheet" href="css/prettify.css">
+  <link rel="stylesheet" href="css/katex.min.css">
+</head>
+<body><div id="container" class="viewport-flip"><div id="text-container" class="content flip" style="display: none; width: 92%;"># From data feed to data viz: Reviewing the rewriting of the tabulated data
 
 In the ordered list below, I review the major changes in the way the data was originally structured as tabulated information. Be sure to note how Ridolfo's data is written as a typical spreadsheet, which follows the standard rows and columns structure. In the second list item, note how the spreadsheet is reformatted as a JSON (JavaScript Object Notation). Then, be sure to note how I revise the data from its original format, using the JavaScript programming language. I use the first year (2012-2013) as a running example throughout the list below, as well as console logs which I review in the video:
 
