--- a/writing-with-data.html
+++ b/writing-with-data.html
@@ -49,6 +49,16 @@
           <figcaption class="context">Context:</figcaption>
           <img class="console-cl" src="images/inspector-console-refreshed.png" alt="Image of Console with desired output." />
         </figure>
+        <pre>var a="a";var b="b";var c="c";var d="d";
+
+console.table([a,b,c,d]);
+
+console.table([[a,b,c,d],[a,b,c,d],[a,b,c,d]]);
+
+console.table([[a,b,c,d],[a,b,c,d],[a,b,c,d]],[[a,b,c,d],[a,b,c,d],[a,b,c,d]]);
+
+console.table([[{i:1,v:a},{i:2,v:b},{i:3,v:c},{i:4,v:d}]]);
+        </pre>
       </li>
     </ol>
     <script type="text/javascript">
