added id to footer

--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
             </blockquote>
           </div>
 
-          <footer>
+          <footer id="resources">
               <h3>Tutorial Resources</h3>
               <ul>
                 <li>
