--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
                 </li>
               </ul>
 
-              <h3>Extra Resources</h3>
+              <h3>Additional Resources</h3>
               <ul>
                 <li>
                   <a href="writing-with-data.html" target="_blank" rel="noopener">
