--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="chart-container">
           <div id="bar-chart"></div>
           <div>
-            <h2>Annotated Multi-Line Chart: Comparing each year's job postings per week</h2>
+            <h2>Annotated multi-line chart: Comparing each year's job postings per week</h2>
             <svg id="line-chart" width="1080" height="500"></svg>
           </div>
 
