Fix y-axis default: change start from 20 to 0

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
           <div id="bar-chart"></div>
           <div>
             <h2>Annotated multi-line chart: Comparing each year's job postings per week until week 17/January 1</h2>
+            <p>
+              To compare yearly data per week, click and drag your mouse within the chart below.
+            </p>
             <svg id="line-chart" width="1080" height="500"></svg>
           </div>
 
