--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div>
             <h2>Annotated multi-line chart: Comparing each year's job postings per week until week 17/January 1</h2>
             <p>
-              To compare yearly data per week, click and drag your mouse within the chart below.
+              To compare the yearly data per week, either hover your mouse over the chart below, or click and drag your mouse within the chart's area.
             </p>
             <svg id="line-chart" width="1080" height="500"></svg>
           </div>
