update joob wiki content with job field note

--- a/index.html
+++ b/index.html
@@ -251,7 +251,10 @@
           <section id="job-wiki">
             <h2>Academic Job Wiki Findings</h2>
             <p>
-              The below charts were generated from scraped data from the 2011-2020 Rhetorican &amp; Composition Academic Job Wiki pages (src_code: modified from Ryan Heuser's <a href="https://github.com/quadrismegistus/jobcensus" target="_blank" rel="noopenner">jobcensus</a>). <strong>Note</strong>: Please remember that the latest job year will only reflect the total since it was last scraped.
+              The below charts were generated from scraped data from the 2011-2020 Rhetorican &amp; Composition Academic Job Wiki pages (src_code: modified from Ryan Heuser's <a href="https://github.com/quadrismegistus/jobcensus" target="_blank" rel="noopenner">jobcensus</a>).
+            </p>
+            <p>
+              <strong>Note</strong>: Please remember that the latest job year will only reflect the total since it was last scraped.
             </p>
 
             <h3>2011-2020: Rhetoric &amp; Composition Jobs Overall</h3>
@@ -280,7 +283,7 @@
               <img src="images/rc-field-alias.svg" alt="Chart that conveys the number of academic positions categorized by their field of study between 2011 and the current market year: rhetoric and composition, generalist, community college, etc." />
               <figcaption>
                 <p>
-                  Chart that conveys the number of academic positions categorized by their field of study between 2011 and the current market year: rhetoric and composition, generalist, community college, etc.
+                  Chart that conveys the number of academic positions categorized by their field of study between 2011 and the current market year: rhetoric and composition, generalist, community college, etc. The job fields were choosen based on their relevance to broader discipline.
                 </p>
               </figcaption>
             </figure>
