update job wiki content

--- a/index.html
+++ b/index.html
@@ -249,20 +249,25 @@
 
           <!-- START JOB WIKI -->
           <section id="job-wiki">
-            <h2>Academic Job Wiki Findings</h2>
+            <h2>(Informal) Rhetoric &amp; Composition Job Census</h2>
+
             <p>
-              The below charts were generated from scraped data from the 2011-2020 Rhetorican &amp; Composition Academic Job Wiki pages (src_code: modified from Ryan Heuser's <a href="https://github.com/quadrismegistus/jobcensus" target="_blank" rel="noopenner">jobcensus</a>).
+              Beyond the initial 17 weeks, how many jobs are offered each year in Rhetoric and Composition? This "census" is meant to be an informal count of the jobs advertised each year by using the <a href="https://academicjobs.wikia.org/" rel="nofollow">Academic Jobs Wiki</a> as its primary source.
+            </p>
+
+            <p>
+              The below charts were generated from scraped data from the 2011-2020 Rhetorican &amp; Composition Academic Job Wiki pages. I modified Ryan Heuser's <a href="https://github.com/quadrismegistus/jobcensus" target="_blank" rel="noopenner">jobcensus</a> repo designed for English Studies (my src code here: <a href="https://github.com/lingeringcode/rc-jobcensus" target="_blank" rel="noopenner">rc-jobcensus</a>).
             </p>
             <p>
               <strong>Note</strong>: Please remember that the latest job year will only reflect the total since it was last scraped.
             </p>
 
-            <h3>2011-2020: Rhetoric &amp; Composition Jobs Overall</h3>
+            <h3>2011-2020: Rhetoric &amp; Composition Jobs Overall (excluding postdocs)</h3>
             <figure id="job-wiki-overall">
               <img src="images/rc-jobs-overall.svg" alt="Chart that conveys an overall decline in the number of all academic positions between 2011 and the current market year." />
               <figcaption>
                 <p>
-                  Chart that conveys an overall decline in the number of all academic positions between 2011 and the current market year
+                  Chart that conveys an overall decline in the number of all academic positions between 2011 and the current market year. This chart excludes Postdoctoral positions.
                 </p>
               </figcaption>
             </figure>
