added caveat to census data

--- a/index.html
+++ b/index.html
@@ -256,10 +256,10 @@
             </p>
 
             <p>
-              The below charts were generated from scraped data from the 2011-2020 Rhetorican &amp; Composition Academic Job Wiki pages. I modified Ryan Heuser's <a href="https://github.com/quadrismegistus/jobcensus" target="_blank" rel="noopenner">jobcensus</a> repo designed for English Studies (my src code here: <a href="https://github.com/lingeringcode/rc-jobcensus" target="_blank" rel="noopenner">rc-jobcensus</a>).
+              The below charts were generated from scraped data from the 2011-2020 Rhetorican &amp; Composition Academic Job Wiki pages. I modified Ryan Heuser's <a href="https://github.com/quadrismegistus/jobcensus" target="_blank" rel="noopenner">jobcensus</a> repo designed for English Studies. (See my source code here: <a href="https://github.com/lingeringcode/rc-jobcensus" target="_blank" rel="noopenner">rc-jobcensus</a>).
             </p>
             <p>
-              <strong>Note</strong>: Please remember that the latest job year will only reflect the total since it was last scraped.
+              <strong>Note</strong>: Please remember that the latest job year will only reflect the total since it was last scraped. I am also still working out some data-proccessing quirks, so please consider the below results with that information in mind. If you have any questions, please feel free to contact me.
             </p>
 
             <h3>2011-2020: Rhetoric &amp; Composition Jobs Overall (excluding postdocs)</h3>
