updated page with framing links in header

--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
     <div class="container">
       <header>
         <h1>Rhetoric, Composition, and Technical Communication Job Postings per Year</h1>
+        <div>
+          <p>
+            Review Rhetmap.org's 'market comparison' data and a broader census of the market overall.
+          </p>
+          <nav>
+            <ul>
+              <li>
+                <a href="#bar-chart">Rhetmap.org Weeks 1-17</a>
+              </li>
+              <li>
+                <a href="#job-wiki">Rhetoric &amp; Composition Job Census</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
       </header>
       <section class="main">
 
