--- a/index.html
+++ b/index.html
@@ -269,6 +269,14 @@
               </blockquote>
             </div>
           </section>
+
+          <!-- <section id="prediction-chart">
+            <h3>Based on the historical data, predict the number of job postings per week</h3>
+            <p>
+              To compare the yearly data per week, either hover your mouse over the chart below, or click and drag your mouse within the chart's area.
+            </p>
+            <svg id="trend-chart" viewBox="0 0 1000 500"></svg>
+          </section> -->
         </article>
         
         <article id="job-wiki">
