add prediction chart to render after week 17 of current year

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                       2019-2020
                     </td>
                     <td class="fifteen">
-                      n/a
+                      203
                     </td>
                   </tr>
 
@@ -250,7 +250,7 @@
                       2019-2020
                     </td>
                     <td class="fifteen">
-                      n/a
+                      77.83%
                     </td>
                   </tr>
 
@@ -270,13 +270,9 @@
             </div>
           </section>
 
-          <!-- <section id="prediction-chart">
-            <h3>Based on the historical data, predict the number of job postings per week</h3>
-            <p>
-              To compare the yearly data per week, either hover your mouse over the chart below, or click and drag your mouse within the chart's area.
-            </p>
-            <svg id="trend-chart" viewBox="0 0 1000 500"></svg>
-          </section> -->
+          <section id="prediction-chart">
+            
+          </section>
         </article>
         
         <article id="job-wiki">
