Code overhaul using js module format

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
     <!--[if lte IE 8]><style>.main{display:none;} .support-note .note-ie{display:block;}</style><![endif]-->
     <!-- js libs -->
-    <script type="text/javascript" src="js/d3.v4.min.js"></script>
     <script type="text/javascript" src="js/d3.v5.min.js"></script>
-    <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -399,5 +397,8 @@
       </main>
     </div>
   </body>
-  <script src="js/charts.js"></script>
+  <script type="module" src="./js/getdata.js"></script>
+  <script type="module" src="./js/format.js"></script>
+  <script type="module" src="./js/racing-bars.js"></script>
+  <script type="module" src="./js/line.js"></script>
 </html>
