add noote about tooltip

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 
             <div id="avg-posts-per-week">
               <h3>Average (mean) posts per week</h3>
+              <p>
+                Tap, click, or drag your mouse within the chart below for more information.
+              </p>
               <!-- Append chart -->
               <div id="tooltip" class="tooltip">
                   <div class="tooltip-week">
