add weeks to tooltip

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
             <div id="avg-posts-per-week">
               <h3>Average (mean) posts per week</h3>
               <p>
-                Tap, click, or drag your mouse within the chart below for more information.
+                Tap, click and drag, or hover your mouse within the chart below for more information.
               </p>
               <!-- Append chart -->
               <div id="tooltip" class="tooltip">
                   <div class="tooltip-week">
-                      Week: <span id="week"></span>
+                      Weeks <span id="week"></span>
                   </div>
                   <div class="tooltip-post">
                       Average job postings per week: <span id="post"></span>
