add standard deviation

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
                   </div>
                   <div class="tooltip-post">
                       Average job postings per week: <span id="post"></span>
+                      <br />
+                      Standard deviation: <span id="st-dev"></span>
                   </div>
               </div>
             </div>
